# qml-android-example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.qml
platform/android/: AndroidManifest.xml
